--- a/site/templates/twig/msa/logm/user/form/user-roles.twig
+++ b/site/templates/twig/msa/logm/user/form/user-roles.twig
@@ -1,8 +1,6 @@
-<div class="form-group row">
-	<div class="col-sm-3">
+<div class="row">
+	<div class="form-group col-sm-3">
 		<label for="admin">System Administrator</label>
-	</div>
-	<div class="col-sm-9">
 		{% include 'util/bootstrap/form/select-simple.twig' with {
 				'select': {
 					'name': 'admin',
@@ -14,13 +12,8 @@
 			}
 		%}
 	</div>
-</div>
-
-<div class="form-group row">
-	<div class="col-sm-3">
+	<div class="form-group col-sm-3">
 		<label for="storefront">Store Front</label>
-	</div>
-	<div class="col-sm-9">
 		{% include 'util/bootstrap/form/select-simple.twig' with {
 				'select': {
 					'name': 'admin',
@@ -32,13 +25,8 @@
 			}
 		%}
 	</div>
-</div>
-
-<div class="form-group row">
-	<div class="col-sm-3">
+	<div class="form-group col-sm-3">
 		<label for="citydesk">City Desk</label>
-	</div>
-	<div class="col-sm-9">
 		{% include 'util/bootstrap/form/select-simple.twig' with {
 				'select': {
 					'name': 'citydesk',
@@ -50,13 +38,8 @@
 			}
 		%}
 	</div>
-</div>
-
-<div class="form-group row">
-	<div class="col-sm-3">
+	<div class="form-group col-sm-3">
 		<label for="reportadmin">Report Admin</label>
-	</div>
-	<div class="col-sm-9">
 		{% include 'util/bootstrap/form/select-simple.twig' with {
 				'select': {
 					'name': 'reportadmin',
