ADD list js to focus on

--- a/site/templates/twig/msa/logm/list.twig
+++ b/site/templates/twig/msa/logm/list.twig
@@ -28,7 +28,7 @@
 		</thead>
 		<tbody>
 			{% for user in users %}
-				<tr>
+				<tr data-userid="{{ user.id }}">
 					<td>
 						<span class="text-monospace">{{ user.id|spacepad(logm.fieldAttribute('id', 'maxlength'))|raw }}</span>
 						{{ user.name }}
