--- a/site/templates/twig/msa/logm/user/.js.twig
+++ b/site/templates/twig/msa/logm/user/.js.twig
@@ -76,6 +76,16 @@ $(function() {
 		modal.modal('hide');
 	});
 
+	$("body").on('click', '.whse-link', function(e) {
+		e.preventDefault();
+		var button = $(this);
+		var whseid = button.data('whseid');
+		var modal  = button.closest('.modal');
+		var input  = $(modal.attr('data-input'));
+		input.val(whseid);
+		modal.modal('hide');
+	});
+
 	$("body").on('submit', '#ajax-modal form', function(e) {
 		e.preventDefault();
 		var form   = $(this);
