--- a/site/templates/twig/items/itm/itm/list.twig
+++ b/site/templates/twig/items/itm/itm/list.twig
@@ -13,7 +13,7 @@
 		<tr class="bg-dark text-white">
 			<th scope="col">Item ID / Description</th>
 			<th scope="col">Group</th>
-			<th scope="col">
+			<th scope="col" class="text-center">
 				<a href="{{ page.itmAddUrl() }}" class="btn btn-sm btn-light">
 					<i class="fa fa-plus" aria-hidden="true"></i> Add Item
 				</a>
