--- a/site/templates/twig/warehouse/inventory/mlot/img/lotserial/display.twig
+++ b/site/templates/twig/warehouse/inventory/mlot/img/lotserial/display.twig
@@ -1,9 +1,8 @@
 {% include 'warehouse/inventory/mlot/img/lotserial/details.twig' %}
 
-<form action="{{ input.url() }}" method="POST">
-	<label for="image">Image</label>
-	<div class="custom-file">
-		<input type="file" class="custom-file-input" name="image" id="image">
-		<label class="custom-file-label" for="image">Choose file</label>
-	</div>
-</form>
+
+<div class="mb-3">
+	{% include 'warehouse/inventory/mlot/img/lotserial/preview.twig' %}
+</div>
+
+{% include 'warehouse/inventory/mlot/img/lotserial/form.twig' %}
