FEAT: add lotserial, action fields

--- a/site/templates/twig/warehouse/inventory/mlot/img/lotserial/form.twig
+++ b/site/templates/twig/warehouse/inventory/mlot/img/lotserial/form.twig
@@ -1,4 +1,7 @@
-<form action="{{ input.url() }}" method="POST" id="img-form">
+<form action="{{ input.url() }}" method="POST" enctype="multipart/form-data" id="img-form">
+	<input type="hidden" name="action" value="update">
+	<input type="hidden" name="lotserial" value="{{ lotserial.lotserial }}">
+	
 	<div class="form-group">
 		<label for="image">Image</label>
 		<div class="custom-file">
