--- a/site/templates/twig/msa/logm/user.twig
+++ b/site/templates/twig/msa/logm/user.twig
@@ -1,3 +1,6 @@
+<div class="mb-3">
+	{% include 'msa/logm/user/subfunction-links.twig' %}
+</div>
 <div class="row">
 	<div class="col-sm-8">
 		{% include 'msa/logm/user/form.twig' %}
