--- a/site/templates/twig/msa/logm/user/form.twig
+++ b/site/templates/twig/msa/logm/user/form.twig
@@ -134,12 +134,18 @@
 	{% include 'msa/logm/user/form/login-roles.twig' %}
 
 	<div class="d-flex justify-content-between align-items-center">
-		<button type="submit" name="action" value="update" class="btn btn-success">
-			<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
-		</button>
-		<button type="submit" name="action" value="delete" class="btn btn-danger delete_button">
-			<i class="fa fa-trash-o" aria-hidden="true"></i> Delete
-		</button>
+		{% if logm.recordlocker.userHasLocked(duser.id) or duser.isNew() %}
+			<button type="submit" name="action" value="update" class="btn btn-success">
+				<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
+			</button>
+			{% if duser.isNew() == false %}
+				<button type="submit" name="action" value="delete" class="btn btn-danger delete_button">
+					<i class="fa fa-trash-o" aria-hidden="true"></i> Delete
+				</button>
+			{% endif %}
+		{% endif %}
+
+
 		<a href="{{ page.logmUrl(duser.id) }}" class="btn btn-warning">
 			<i class="fa fa-times" aria-hidden="true"></i> Close
 		</a>
