--- a/site/templates/twig/msa/logm/user/contact/form/fax.twig
+++ b/site/templates/twig/msa/logm/user/contact/form/fax.twig
@@ -6,7 +6,7 @@
 	<div class="col-sm-9">
 		{% include 'util/bootstrap/form/input.twig' with {
 				'input': {
-					'name': 'phone',
+					'name': 'coversheet',
 					'value': duser.coversheet,
 					'size': 'sm',
 					'attributes': {
@@ -28,7 +28,7 @@
 	<div class="col-sm-9">
 		{% include 'util/bootstrap/form/input.twig' with {
 				'input': {
-					'name': 'phone',
+					'name': 'faxsubject',
 					'value': duser.faxsubject,
 					'size': 'sm',
 					'attributes': {
