--- a/site/templates/twig/msa/logm/user/contact/form/send-time.twig
+++ b/site/templates/twig/msa/logm/user/contact/form/send-time.twig
@@ -5,6 +5,7 @@
 			'input': {
 				'id': option,
 				'name': 'sendtime',
+				'value': option,
 				'label': label,
 				'size': 'sm',
 				'attributes': {
