--- a/site/templates/twig/msa/logm/user/contact/form.twig
+++ b/site/templates/twig/msa/logm/user/contact/form.twig
@@ -31,7 +31,7 @@
 			{% endif %}
 		{% endif %}
 
-		<a href="{{ page.logmUrl(duser.id) }}" class="btn btn-warning">
+		<a href="{{ page.userEditUrl(duser.id) }}" class="btn btn-warning">
 			<i class="fa fa-times" aria-hidden="true"></i> Close
 		</a>
 	</div>
