--- a/site/templates/twig/msa/logm/user/subfunction-links.twig
+++ b/site/templates/twig/msa/logm/user/subfunction-links.twig
@@ -1,5 +1,12 @@
 <ul class="nav nav-pills nav-justified">
 	<li class="nav-item border">
-		<a class="nav-link" href="{{ page.userEditContactUrl(input.get.text('id')) }}">Contact</a>
+		<a class="nav-link" href="{{ page.userEditContactUrl(input.get.text('id')) }}">
+			Contact
+		</a>
+	</li>
+	<li class="nav-item border">
+		<a class="nav-link" data-toggle="modal" href="#pswd-modal">
+			Change Password
+		</a>
 	</li>
 </ul>
