--- a/site/templates/twig/msa/logm/user/subfunction-links.twig
+++ b/site/templates/twig/msa/logm/user/subfunction-links.twig
@@ -9,4 +9,9 @@
 			Change Password
 		</a>
 	</li>
+	<li class="nav-item border">
+		<a class="nav-link" data-toggle="modal" href="#pswd-web-modal">
+			Change Web Password
+		</a>
+	</li>
 </ul>
