--- a/site/templates/twig/warehouse/inventory/mlot/img/lotserial/display.twig
+++ b/site/templates/twig/warehouse/inventory/mlot/img/lotserial/display.twig
@@ -1,4 +1,13 @@
-{% include 'warehouse/inventory/mlot/img/lotserial/details.twig' %}
+<div class="row mb-3">
+	<div class="col-sm-6">
+		{% include 'warehouse/inventory/mlot/img/lotserial/details.twig' %}
+	</div>
+	<div class="col-sm-6">
+		<div class="text-center">
+			<img src="{{ docm.getViewer().url(docm.getImageFilename(lotserial.lotserial)) }}" alt="{{ docm.getFolders().description(docm.getFolder()) ~ ' ' ~ lotserial.lotserial }}">
+		</div>
+	</div>
+</div>
 
 <div class="mb-3">
 	{% include 'warehouse/inventory/mlot/img/lotserial/preview.twig' %}
