--- a/site/templates/twig/warehouse/inventory/mlot/img/scan/results/list.twig
+++ b/site/templates/twig/warehouse/inventory/mlot/img/scan/results/list.twig
@@ -3,7 +3,7 @@
 		<tr>
 			<th></th>
 			<th>Item ID</th>
-			<th>Description</th>
+			<th colspan="2">Description</th>
 		</tr>
 	</thead>
 	{% for item in inventory.getItemsDistinct() %}
@@ -14,7 +14,7 @@
 				</button>
 			</td>
 			<td>{{ item.itemid }}</td>
-			<td>
+			<td colspan="2">
 				<small>
 					{{ item.desc1 }} {{ item.desc2 ? ('<br>' ~ item.desc2)|raw : '' }}
 				</small>
@@ -43,7 +43,8 @@
 				<td>{{ lotserial.qty }}</td>
 				<td>
 					{% if docm.hasImage(lotserial.lotserial) %}
-						<button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#image-modal" data-type="{{ docm.getFolders().description(docm.getFolder()) }}" data-id="{{ lotserial.lotserial }}" data-src="{{ docm.getViewer().url(docm.getImageFilename(lotserial.lotserial), docm.getFolder()) }}">
+					{% set image = docm.getImage(lotserial.lotserial) %}
+						<button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#image-modal" data-type="{{ docm.getFolders().description(image.folder) }}" data-id="{{ lotserial.lotserial }}" data-folder="{{ image.folder }}" data-file="{{ image.filename }}">
 							<i class="fa fa-picture-o" aria-hidden="true"></i>
 							<span class="sr-only">View Image</span>
 						</button>
