--- a/site/templates/twig/shared/image-modal.twig
+++ b/site/templates/twig/shared/image-modal.twig
@@ -11,7 +11,7 @@
 			</div>
 			<div class="modal-body">
 				<div class="text-center">
-					<img src="" alt="">
+					<img src="" class="img-fluid" alt="">
 				</div>
 			</div>
 		</div>
