--- a/site/templates/twig/items/cxm/xref/form/js.twig
+++ b/site/templates/twig/items/cxm/xref/form/js.twig
@@ -118,11 +118,11 @@ $(function() {
 	modal_ajax.on('show.bs.modal', function (event) {
 		var button = $(event.relatedTarget); // Button that triggered the modal
 		var modal = $(this);
-		var url = button.data('lookupurl');
 
+		modal.attr('data-input', button.data('input'));
 		modal.find('.modal-title').text(button.attr('title'));
 		modal.resizeModal('xl');
-		modal.find('.modal-body').loadin(url, function() {});
+		modal.find('.modal-body').loadin(button.data('lookupurl'), function() {});
 	});
 
 	$("body").on('click', '.customer-link', function(e) {
