--- a/site/templates/twig/warehouse/picking/unguided/order/items/sublined/item/allocated.twig
+++ b/site/templates/twig/warehouse/picking/unguided/order/items/sublined/item/allocated.twig
@@ -1,6 +1,6 @@
 <div class="collapse" id="allocated-{{ item.linenbr|attrJS }}">
 	<div class="list-group-item bg-gray">
-		Line # {{ item.linenbr }} Allocated Lotserials
+		<b>Line # {{ item.linenbr }} Allocated Lotserials</b>
 	</div>
 	<div class="list-group-item bg-light">
 		<div class="row">
