--- a/site/templates/twig/warehouse/picking/unguided/order/items/sublined/item/lotserials.twig
+++ b/site/templates/twig/warehouse/picking/unguided/order/items/sublined/item/lotserials.twig
@@ -1,6 +1,6 @@
 <div class="collapse" id="{{ item.linenbr|attrJS }}">
 	<div class="list-group-item bg-gray">
-		Line # {{ item.linenbr }} Picked Lotserials
+		<b>Line # {{ item.linenbr }} Picked Lotserials</b>
 	</div>
 	<div class="list-group-item bg-light">
 		<div class="row">
