Add Twig Documentation

--- a/site/templates/twig/warehouse/inventory/mlot/img/lotserial/form.twig
+++ b/site/templates/twig/warehouse/inventory/mlot/img/lotserial/form.twig
@@ -1,7 +1,15 @@
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page
+	docm                   Dplus\DocManagement\Finders\Lt\Img
+	lotserial              Invsearch
+#}
+
 <form action="{{ input.url() }}" method="POST" enctype="multipart/form-data" id="img-form">
 	<input type="hidden" name="action" value="update">
 	<input type="hidden" name="lotserial" value="{{ lotserial.lotserial }}">
-	
+
 	<div class="form-group">
 		<label for="image">Image</label>
 		<div class="custom-file">
