--- a/site/templates/twig/warehouse/inventory/mlot/img/lotserial/preview.twig
+++ b/site/templates/twig/warehouse/inventory/mlot/img/lotserial/preview.twig
@@ -1,3 +1,10 @@
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page
+	docm                   Dplus\DocManagement\Finders\Lt\Img
+	lotserial              Invsearch
+#}
 <div class="row">
 	<div class="col-sm-6">
 		<div class="card">
