--- a/site/templates/twig/warehouse/inventory/mlot/img/lotserial/details.twig
+++ b/site/templates/twig/warehouse/inventory/mlot/img/lotserial/details.twig
@@ -1,3 +1,11 @@
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page
+	docm                   Dplus\DocManagement\Finders\Lt\Img
+	lotserial              Invsearch
+#}
+
 <table class="table table-sm table-striped">
 	<tr>
 		<td>Item ID</td>
