--- a/site/templates/twig/warehouse/inventory/mlot/img/lotserial/display.twig
+++ b/site/templates/twig/warehouse/inventory/mlot/img/lotserial/display.twig
@@ -1,3 +1,11 @@
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page
+	docm                   Dplus\DocManagement\Finders\Lt\Img
+	lotserial              Invsearch
+#}
+
 <div class="mb-3">
 	<a href="{{ page.imgUrl() }}" class="btn btn-primary btn-lg">
 		<i class="fa fa-search" aria-hidden="true"></i> Search
