--- a/site/templates/twig/warehouse/inventory/mlot/img/scan/results/display.twig
+++ b/site/templates/twig/warehouse/inventory/mlot/img/scan/results/display.twig
@@ -1,3 +1,10 @@
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page
+	inventory              Dplus\Wm\Inventory\Search
+	docm                   Dplus\DocManagement\Finders\Lt\Img
+#}
 <div class="mb-3">
 	<a href="{{ page.imgUrl() }}" class="btn btn-primary btn-lg">
 		<i class="fa fa-search" aria-hidden="true"></i> Search
