--- a/site/templates/twig/warehouse/inventory/mlot/img/scan/results/list.twig
+++ b/site/templates/twig/warehouse/inventory/mlot/img/scan/results/list.twig
@@ -1,3 +1,10 @@
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page
+	inventory              Dplus\Wm\Inventory\Search
+	docm                   Dplus\DocManagement\Finders\Lt\Img
+#}
 <table class="table table-sm table-striped">
 	<thead>
 		<tr>
