--- a/site/templates/twig/warehouse/picking/order/header-info.twig
+++ b/site/templates/twig/warehouse/picking/order/header-info.twig
@@ -1,3 +1,10 @@
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page
+	order                  SalesOrder
+	whsession              Whsesession
+#}
 <div class="row mt-4">
 	<div class="col-sm-4">
 		<table class="table table-sm">
