--- a/site/templates/twig/warehouse/picking/unguided/order/items/sublined/item/tbody.allocated.twig
+++ b/site/templates/twig/warehouse/picking/unguided/order/items/sublined/item/tbody.allocated.twig
@@ -1,3 +1,12 @@
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page
+	m_picking              module Picking
+	item                   PickSalesOrderDetail
+	lotAllocator           Dplus\Wm\Sop\Picking\AllocatedLots
+	docm                   Dplus\DocManagement\Finders\Lt\Img
+#}
 <tbody class="collapse" id="allocated-{{ item.linenbr|attrJS }}">
 	<tr class="bg-gray">
 		<td></td>
