--- a/site/templates/twig/warehouse/picking/unguided/order/items/sublined/item/tr.item.twig
+++ b/site/templates/twig/warehouse/picking/unguided/order/items/sublined/item/tr.item.twig
@@ -1,3 +1,12 @@
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page
+	m_picking              module Picking
+	item                   PickSalesOrderDetail
+	lotAllocator           Dplus\Wm\Sop\Picking\AllocatedLots
+	docm                   Dplus\DocManagement\Finders\Lt\Img
+#}
 <tr class="first-txn-row {{ item.count_pickeditems() > item.qtyordered ? 'bg-warning text-white'}}">
 	<td class="text-center">{{ item.linenbr }}</td>
 	<td class="text-center">
