--- a/site/templates/twig/sales-orders/sales-order/provalley/items.twig
+++ b/site/templates/twig/sales-orders/sales-order/provalley/items.twig
@@ -8,6 +8,7 @@
 	order.items            SalesOrderDetail[]|ObjectCollection
 #}
 {% set lotAllocator = soTools.getLotAllocatorM() %}
+{% set docm = lotAllocator.getDocm() %}
 
 <table class="table table-striped table-borderless">
 	<thead class="bg-dark text-white font-weight-bold">
@@ -56,14 +57,24 @@
 				<th>Line # {{ detail.linenbr }} allocated Lots</th>
 				<th>Lot / Serial #</th>
 				<th class="text-right">Qty</th>
-				<th colspan="4"></th>
+				<th>Image</th>
+				<th colspan="3"></th>
 			</tr>
 			{% for lot in lotAllocator.allocatedLotserials(detail.ordernumber, detail.linenbr) %}
 				<tr>
 					<td></td>
 					<td>{{ lot.lotserial }}</td>
 					<td class="text-right">{{ lot.shipqty|number_format(config.decimal_places_qty) }}</td>
-					<td colspan="3"></td>
+					<td>
+						{% if docm.hasImage(lot.lotserial) %}
+							{% set image = docm.getImage(lot.lotserial) %}
+							<button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#image-modal" data-type="{{ docm.getFolders().description(image.folder) }}" data-id="{{ lot.lotserial }}" data-folder="{{ image.folder }}" data-file="{{ image.filename }}">
+								<i class="fa fa-picture-o" aria-hidden="true"></i>
+								<span class="sr-only">View Image</span>
+							</button>
+						{% endif %}
+					</td>
+					<td colspan="2"></td>
 				</tr>
 			{% endfor %}
 		</tbody>
