use Msa MVC for msa template

--- a/site/templates/twig/msa/noce/ajax/list.twig
+++ b/site/templates/twig/msa/noce/ajax/list.twig
@@ -2,7 +2,7 @@
 	var                    Description / Instance of
 	-------------------------------------------------
 	page                   ProcessWire\Page
-	qnotes                 module QnotesPredefined
+	qnotes                 Dplus\Qnotes\Noce
 	notes                  NotesPredefined[]
 #}
 <div class="list-group">
