--- a/site/templates/twig/msa/noce/notes-modal.twig
+++ b/site/templates/twig/msa/noce/notes-modal.twig
@@ -2,7 +2,7 @@
 	var                    Description / Instance of
 	-------------------------------------------------
 	page                   ProcessWire\Page
-	qnotes                 module QnotesPredefined
+	qnotes                 module Dplus\Qnotes\Noce
 #}
 <div class="modal fade" id="notes-modal" tabindex="-1" role="dialog" aria-labelledby="notes-modal-label" aria-hidden="true">
 	<div class="modal-dialog modal-700" role="document">
