--- a/site/templates/twig/code-tables/msa/sysop/list.twig
+++ b/site/templates/twig/code-tables/msa/sysop/list.twig
@@ -1,3 +1,9 @@
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page
+	manager                Dplus\Codes\Msa\Sysop
+#}
 <table class="table table-sm">
 	<thead>
 		<tr class="bg-dark text-white">
